--- a/app/assets/stylesheets/store.css
+++ b/app/assets/stylesheets/store.css
@@ -139,10 +139,11 @@
 }
 @media screen and (min-width:641px) and (max-width:1199px){
   .sp_wrap{margin:0;}
-  .sp_wrap .sp_right .sotre_card{width:48%;}
+  .sp_wrap .sp_left{display:none;}
+  .sp_wrap .sp_right{width:100%;}
   .sp_wrap .sp_left .sp_menu ul li a{font-size:12px;}
   .sp_wrap .sp_right .inner .sp_title{font-size:15px;}
-  .sp_wrap .sp_right .sp_card{float:none;width:100%;margin:0;height:140px;padding:10px 0;}
+  /*.sp_wrap .sp_right .sp_card{float:none;width:100%;margin:0;height:140px;padding:10px 0;}*/
   /*.sp_wrap .sp_right .inner em.expired{color:red;font-size:15px;background:none;text-align:left;}
   .sp_wrap .sp_right .inner em.endtoday{color:#ffa500;font-size:15px;background:none;text-align:left;}*/
   .sp_wrap .sp_right .sp_btn a{padding:10px;font-size:11px;text-align:center;}
@@ -212,16 +213,20 @@
 .store-button:after{content:'';position:absolute;top:50%;right:15px;transform:translateY(-50%);width:0;height:0;border-left:5px solid transparent;border-right:5px solid transparent;border-top:5px solid black;}
 .store-button:hover{background-color:#eee;}
 .store-input{display:none;}
-.sotre_menu{position:absolute;top:100%;border:1px solid #ccc;border-radius:4px;padding:0;margin:2px 0 0 0;box-shadow:0 0 6px 0 rgba(0,0,0,0.1);background-color:#fff;list-style-type:none;}
-.store-input + .sotre_menu{display:none;z-index:10;} 
-.store-input:checked + .sotre_menu{display:block;z-index:10;overflow:scroll;height:1000%;width:100%;} 
-.sotre_menu li{padding:10px 20px;cursor:pointer;white-space:nowrap;}
-.sotre_menu li a{display:block;margin:-10px -20px;padding:10px 20px;color:#000;font-size:15px;}
-.sotre_menu li.divider{padding:0;border-bottom:1px solid #ccc;}
-.sotre_menu li.search_li{padding:10px 10px;}
+.store_menu{position:absolute;top:100%;border:1px solid #ccc;border-radius:4px;padding:0;margin:2px 0 0 0;box-shadow:0 0 6px 0 rgba(0,0,0,0.1);background-color:#fff;list-style-type:none;}
+.store-input + .store_menu{display:none;z-index:10;} 
+.store-input:checked + .store_menu{display:block;z-index:10;overflow:scroll;height:1000%;width:100%;} 
+.store-input:checked + .store_deal{height:530%;}
+.store_menu li{padding:10px 20px;cursor:pointer;white-space:nowrap;}
+.store_menu li a{display:block;margin:-10px -20px;padding:10px 20px;color:#000;font-size:15px;}
+.store_menu li.divider{padding:0;border-bottom:1px solid #ccc;}
+.store_menu li.search_li{padding:10px 10px;}
 .dropdown .store_search input{width:100%;padding:10px 5px;border:1px solid #ccc;border-radius:10px;}
 @media screen and (max-width:640px){
   .dropdown{display:inline-block;}
+}
+@media screen and (min-width:641px) and (max-width:1199px){
+   .dropdown{display:inline-block;} 
 }
 
 
