add site on naver

--- a/app/views/deals/_header_store.html.erb
+++ b/app/views/deals/_header_store.html.erb
@@ -14,8 +14,8 @@
     
     <div class="gnb_m">
       <ul class="clearfix">
-        <li><a href="/deals/stores">Home</a></li>
-        <li class="coumos1"><a href="/storepromotions">Sales Offer & Promotions</a></li>
+        <li><a href="/deals/stores">Home,</a></li>
+        <li class="coumos1"><a href="/storepromotions">Sales Offer & Promotions,</a></li>
         <li><a href="/storedeals">Bargains</a></li>
       </ul>
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="close menu" /></button>
