--- a/app/views/promocodes/_usa_ver2.html.erb
+++ b/app/views/promocodes/_usa_ver2.html.erb
@@ -77,7 +77,7 @@
         <span>
           <ul>
             <% if @promocode.p_coupon_deal.present? %>
-              <li>Check coupon on detail page to receive your extra savings.</li>
+              <li>Check the box for coupon on detail page to receive your extra savings.</li>
             <% end %>
             <% if @promocode.p_extra_deal.present? %>
               <li>This item is on sale now and get extra discount via promo code.</li>
