--- a/app/views/shared/_amz_slider.html.erb
+++ b/app/views/shared/_amz_slider.html.erb
@@ -18,7 +18,7 @@
       </a>
     </div>
     <div class="img_box">
-      <a target="_blank" href="#n">
+      <a target="_blank" href="https://amzn.to/2Q0mwJh">
         <img class="item" src="https://images-na.ssl-images-amazon.com/images/I/91GMSrYPaHL._AC_SR300,300_.jpg">
         <p>Save up to 30% off on Samsung 4K UHD Smart TVs</p>
       </a>
