--- a/app/views/hotdeals/show.html.erb
+++ b/app/views/hotdeals/show.html.erb
@@ -11,7 +11,7 @@
         <!-- <p>Location Map</p> -->
         
         <div class="show_img hotdeal_img">
-          <div class="img_box">
+          <div class="img_box deal_img_box">
             <% if @hotdeal.h_image.present? %>
               <a target="_blank" href="<%= @hotdeal.h_link %>"><img src="<%= @hotdeal.h_image %>" alt="<%= @hotdeal.h_title %>" title="<%= @hotdeal.h_spare_04 %>"></a>
             <% else %>
