--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -11,7 +11,7 @@
         
         <!-- <p>Location Map</p> -->
         <div class="show_img hotdeal_img">
-          <div class="img_box">
+          <div class="img_box deal_img_box">
             <% if @promocode.p_image.present? %>
              <a target="_blank" href="<%= @promocode.p_link %>"><img src="<%= @promocode.p_image %>" alt="<%= @promocode.p_title %>" title="<%= @promocode.p_image_title %>"></a>
             <% else %>
