--- a/app/views/gadgets/edit.html.erb
+++ b/app/views/gadgets/edit.html.erb
@@ -14,8 +14,8 @@
          </div>
 
          <div class="form_input">
-          <%= f.input :gg_img, label: 'Image URL', placeholder: 'Image URL' %>
-          <%= f.input :gg_url, label: 'Product URL', placeholder: 'Product URL' %>
+          <%= f.input :gg_img, label: 'Image URL(Object-Fit:Contain)', placeholder: 'Image URL' %>
+          <%= f.input :gg_option_06, label: 'Image URL(Object-Fit:Cover)', placeholder: 'Image URL' %>
           <%= f.input :gg_title, label: 'Title', placeholder: 'Title' %>
           <%= f.input :gg_spare_05, label: 'Image_title', placeholder: 'Image_title' %>
           <div class="gg_input clearfix">
