--- a/app/views/storepromotions/index.html.erb
+++ b/app/views/storepromotions/index.html.erb
@@ -44,7 +44,7 @@
         <input type="checkbox" class="store-input" id="test">
         <ul class="store_menu">
           <!-- <div class="store_search"><%= form_for "",url: storedeals_path, role: "search", method: :get do %><%= text_field_tag :search, @search_term, placeholder: "Search Store..." %><% end %></div> -->
-          <li><a href="/storepromotions/">All Stores</a></li>
+          <li class="all_store"><a href="/storepromotions/">All Stores</a></li>
           <% Spcategory.all.each do |category| %>
             <li><%= link_to category.name, storepromotions_path(spcategory: category.name) %></li>
           <% end %>
@@ -109,8 +109,9 @@
 
             </div><!--./sd_card-->
           <% end %>
+          <%= will_paginate @storepromotion %>
       </div>
-      <%= will_paginate @storepromotion %>
+      
 
     </div><!--./sp_wrap-->
   </div><!--./warp-->
