--- a/app/assets/stylesheets/gadgets.css
+++ b/app/assets/stylesheets/gadgets.css
@@ -56,7 +56,7 @@
 .on_gadgets .current_category{text-align:center;margin-bottom:30px;}
 .on_gadgets .current_category span{font-family: 'Montserrat', sans-serif;font-size:50px;text-transform:uppercase;font-weight:600;width:200px;border-bottom:1px solid #616161;}
 .on_gadgets .current_category p a{text-decoration:none;font-size:17px;color:#000;}
-.on_gadgets .card_wrap{column-width:250px;column-gap:10px;}
+.on_gadgets .card_wrap{column-width:300px;column-gap:10px;}
 .on_gadgets .card_wrap .card{margin:20px 5%;;position:relative;background: #fff; overflow: hidden;display:inline-block;}
 .on_gadgets .card_wrap .card, 
 .on_gadgets .card-nav ul{border-bottom:1px solid #ccc;}
@@ -64,15 +64,17 @@
 .on_gadgets .card_wrap .card-body{position:relative;padding:5px;font-family: 'Montserrat', sans-serif;font-weight:100;}
 .on_gadgets .card_wrap .card-body span{border-bottom:1px solid #ccc;width:55%;display:inline;color:#616161;text-transform:uppercase;}
 .on_gadgets .card_wrap .card-body .to_featured{float:right;margin-right:1%;text-decoration:none;color:#fff;background:#ff4d4d;border-radius:10px;padding:0 10px;font-weight:bold;}
-.on_gadgets .card_wrap .card-body h4{margin-top:15px;line-height:1.2;font-weight:100;}
-.on_gadgets .card_wrap .card-body h4 a{text-decoration:none;color:#616161;}
+.on_gadgets .card_wrap .card-body h4{margin-top:15px;font-weight:100;line-height:1.2;height:3.2em;overflow: hidden;display:block;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;word-break:break-word;-webkit-box-orient:vertical;-webkit-line-clamp:2;}
+.on_gadgets .card_wrap .card-body h4 a{text-decoration:none;color:#616161;font-size:20px;}
 .on_gadgets .card_wrap .card-body p{margin:10px 0;font-weight:300;color:#616161;}
 .on_gadgets .card_wrap .card-body .btn{margin:10px 0;display:inline-block;}
 .on_gadgets .card_wrap .card-body .btn>em{float:left;font-size:17px;background:#000;color:#fff;padding:3px 20px;border:1px solid #000;line-height:20px;}
 .on_gadgets .card_wrap .card-body .btn>a{float:left;text-decoration:none;color:#000;font-size:20px;border:1px solid #000;padding:3px 20px;line-height:20px;}
 .on_gadgets .card_wrap .card-body .btn>.learnmore{background:#000;color:#fff;}
 .on_gadgets .card_wrap .card-body .card_btn a{text-decoration:none;color:#000;}
-.on_gadgets .card_wrap .card-header img{display:block;width:100%;border-radius:10px;}
+.on_gadgets .card_wrap .card-header .home_img{width:350px;height:350px}
+.on_gadgets .card_wrap .card-header img{display:block;width:100%;height:100%;border-radius:10px;object-fit:contain;}
+.on_gadgets .card_wrap .card-header img.cover{object-fit:cover;}
 .on_gadgets .card_wrap .with-photo
 .on_gadgets .card_wrap .card-header{height:208px;padding:0;overflow:hidden;}
 .on_gadgets .card_wrap .start{position:absolute;top:-45px;right:15px;}
