--- a/app/assets/stylesheets/store.css
+++ b/app/assets/stylesheets/store.css
@@ -194,12 +194,10 @@
     50% {transform: scale(1.06);}
     100% {transform: scale(1);}
 }
-
 @-webkit-keyframes bg {
     from {opacity: 0;}
     to {opacity: 1;}
 }
-
 @-webkit-keyframes inner {
     0% {transform: scale(0.8);}
     50% {transform: scale(1.06);}
@@ -221,6 +219,8 @@
 .store_menu li a{display:block;margin:-10px -20px;padding:10px 20px;color:#000;font-size:15px;}
 .store_menu li.divider{padding:0;border-bottom:1px solid #ccc;}
 .store_menu li.search_li{padding:10px 10px;}
+.store_menu li.all_store{background:#000;}
+.store_menu li.all_store a{color:#fff;}
 .dropdown .store_search input{width:100%;padding:10px 5px;border:1px solid #ccc;border-radius:10px;}
 @media screen and (max-width:640px){
   .dropdown{display:inline-block;}
