--- a/app/views/gadgets/index.html.erb
+++ b/app/views/gadgets/index.html.erb
@@ -60,7 +60,13 @@
                 <% @gadgets.each do |gadget| %>
                   <div class="card with-photo">
                     <div class="card-header">
-                     <a target="_blank" href="<%= gadget.gg_url %>"><img src="<%= gadget.gg_img %>" alt="<%= gadget.gg_title %>" title="<%= gadget.gg_spare_05 %>"></a>
+                     <div class="home_img">
+                       <% if gadget.gg_img.present? %>
+                        <a target="_blank" href="<%= gadget.gg_url %>"><img src="<%= gadget.gg_img %>" alt="<%= gadget.gg_title %>" title="<%= gadget.gg_spare_05 %>"></a>
+                       <% else %>
+                        <a target="_blank" href="<%= gadget.gg_url %>"><img class="cover" src="<%= gadget.gg_option_06 %>" alt="<%= gadget.gg_title %>" title="<%= gadget.gg_spare_05 %>"></a>
+                       <% end %>
+                      </div>
                     </div>
                     
                     <section class="card-body">
