--- a/app/views/gadgets/show.html.erb
+++ b/app/views/gadgets/show.html.erb
@@ -7,7 +7,11 @@
       <div class="show_box clearfix">
         <div class="show_img">
           <div class="img_box">
-            <a target="_blank" href="<%= @gadget.gg_url %>"><img src="<%= @gadget.gg_img %>" alt="<%=@gadget.gg_title %>" title="<%= @gadget.gg_spare_05 %>"></a>
+            <% if @gadget.gg_img.present? %>
+              <a target="_blank" href="<%= @gadget.gg_url %>"><img src="<%= @gadget.gg_img %>" alt="<%=@gadget.gg_title %>" title="<%= @gadget.gg_spare_05 %>"></a>
+            <% else %>
+              <a target="_blank" href="<%= @gadget.gg_url %>"><img src="<%= @gadget.gg_option_06 %>" alt="<%=@gadget.gg_title %>" title="<%= @gadget.gg_spare_05 %>"></a>
+            <% end %>
           </div>
           <% if @gadget.gg_youtube01.present? %>
             <div class="js-overlay-start start" data-url= "<%= @gadget.gg_youtube01 %>"><button><img src="<%=asset_path 'youtube_02.png' %>" alt="Play Youtube" /></button></div>
