--- a/app/views/home/_gadget.html.erb
+++ b/app/views/home/_gadget.html.erb
@@ -3,7 +3,11 @@
     <div class="card with-photo">
       <div class="card-header">
         <div class="home_img">
-          <a target="_blank" href="<%= gadget.gg_url %>"><img src="<%= gadget.gg_img %>" alt="<%= gadget.gg_title %>" title="<%= gadget.gg_spare_05 %>"></a>
+          <% if gadget.gg_img.present? %>
+            <a target="_blank" href="<%= gadget.gg_url %>"><img src="<%= gadget.gg_img %>" alt="<%= gadget.gg_title %>" title="<%= gadget.gg_spare_05 %>"></a>
+          <% else %>
+            <a target="_blank" href="<%= gadget.gg_url %>"><img class="cover" src="<%= gadget.gg_option_06 %>" alt="<%= gadget.gg_title %>" title="<%= gadget.gg_spare_05 %>"></a>
+          <% end %>
         </div>
       </div>
       
@@ -30,20 +34,20 @@
           <h4><%= link_to gadget.gg_title, gadget %></h4>
           <!-- <p><%= gadget.gg_intro %></p> -->
 
-          <div class="btn clearfix">
+         <!--  <div class="btn clearfix">
             <% if gadget.gg_option_03.present? %>
              <a class="learnmore" target="_blank" href="<%= gadget.gg_url %>">Learn More</a>
             <% else %>
             <em><%= number_to_currency(gadget.gg_aprice) %></em><a target="_blank" href="<%= gadget.gg_url %>">Buy Now</a>
             <% end %>
-          </div>
+          </div> -->
 
         <% end %>
-        <% if can? :update, gadget %>
+        <!-- < if can? :update, gadget >
           <div class="btn clearfix admin">
             <em><%= link_to "Edit", edit_gadget_path(gadget) %></em><%= link_to "Delete", gadget_path(gadget), method: :delete, data: {confirm: "Are you sure?"}%>
           </div>   
-        <% end %>
+         -->< end >
       </section>
     </div>
   <% end %>
