--- a/app/views/home/_gadget.html.erb
+++ b/app/views/home/_gadget.html.erb
@@ -47,7 +47,7 @@
           <div class="btn clearfix admin">
             <em><%= link_to "Edit", edit_gadget_path(gadget) %></em><%= link_to "Delete", gadget_path(gadget), method: :delete, data: {confirm: "Are you sure?"}%>
           </div>   
-         -->< end >
+         < end >-->
       </section>
     </div>
   <% end %>
