--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -138,7 +138,7 @@
   .codes .card_wrap .card .inner>.code_high .tooltipurple .tooltip-content{background:#b400b4;}
 
   .codes .card_wrap .card .inner>.code_high>em{font-size:12px;color:#616161;display:block;}
-  .codes .card_wrap .card .inner>.code_high>em.expired{background:red;color:#fff;display:inline-block;padding:5px 10px;border-radius:15px;float:right;}
+  .codes .card_wrap .card .inner>.code_high>em.expired{background:#ff4d4d;color:#fff;display:inline-block;padding:5px 10px;border-radius:15px;float:right;}
 
   .codes .card_wrap .card .inner>.code_high>p{color:#616161;font-size:13px;display:inline;/*border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;*/}
   .codes .card_wrap .card .inner>.code_high .discounted{color:#08f;font-size:25px;margin-right:5px;font-weight:700;display:inline-block;}
@@ -171,7 +171,7 @@
 }
 
 
-@media screen and (max-width:640px){
+@media screen and (max-width:640px){ /* Mobile */
   .codes .note_pc{display:none;}
   .codes .lt_cnt .toggle{margin-top:10px;}
   .codes .lt_cnt .toggle>ul>li{padding:8px 0;border-bottom:1px solid #3d3d3d;background:url(<%=asset_path 'toggle_show_btn.png' %>) top 10px right 10px no-repeat;}
@@ -234,7 +234,7 @@
   .codes .card_wrap .card .inner{padding:7px;font-weight:400}
   .codes .card_wrap .card .inner_top{margin-top:50px;}
   .codes .card_wrap .card .inner>.regular{font-size:13px;border-bottom:2px solid #000;}
-  .codes .card_wrap .card .inner>.regular>em{background:#000;padding:0 5px;color:#fff;}
+  .codes .card_wrap .card .inner>.regular>em{background:#000;padding:0 5px;color:#fff;font-size:20px;}
   .codes .card_wrap .card .inner>.shipping_condition{display:block;font-size:12px;}
   .codes .card_wrap .card .inner>.shipping_condition>a{color:#08f;text-decoration:none;font-weight:bold;}
   .codes .card_wrap .card .inner>.status{}
@@ -273,8 +273,8 @@
   .codes .card_wrap .card .inner>.code_high>ul.exp{}
   .codes .card_wrap .card .inner>.code_high>ul.exp>li{list-style:disc;font-size:11px;color:#616161;display:block;margin-top:3px;}
   .codes .card_wrap .card .inner>.code_high>em{font-size:11px;color:#616161;display:block;margin-top:3px;}
-  .codes .card_wrap .card .inner>.code_high>em.expired{background:red;color:#fff;display:inline-block;padding:5px 10px;border-radius:15px;margin-left:10px;}
-  .codes .card_wrap .card .inner>.code_high>.endtoday{background:#ffa500;color:#fff;display:inline-block;padding:5px 10px;border-radius:15px;margin-left:10px;font-size:11px;}
+  .codes .card_wrap .card .inner>.code_high>em.expired{background:#ff4d4d;color:#fff;display:inline-block;padding:5px 10px;border-radius:15px;margin:0 0 5px 10px;}
+  .codes .card_wrap .card .inner>.code_high>.endtoday{background:#ffa500;color:#fff;display:inline-block;padding:5px 10px;border-radius:15px;margin:0 0 5px 10px;font-size:11px;}
   .codes .card_wrap .card .inner>.code_high>p{display:inline;}
   .codes .card_wrap .card .inner>.code_high .discounted{color:#08f;font-size:25px;margin-right:5px;font-weight:700;display:inline-block;}
   .codes .card_wrap .card .inner>.code_high .ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
