--- a/app/views/deals/_notes_promo_test.html.erb
+++ b/app/views/deals/_notes_promo_test.html.erb
@@ -67,7 +67,7 @@
           <% else %>
             <% if promo_h.p_spare_51 && (promo_h.p_spare_51 <= DateTime.now) %>
             <% promo_h.p_spare_51 %>
-              <p class="endtoday">Expire Today.</p>
+              <p class="endtoday">End Today.</p>
             <% end %>
           <% end %>
         <% end %>
