--- a/app/views/promocodes/_promocode.html.erb
+++ b/app/views/promocodes/_promocode.html.erb
@@ -24,7 +24,7 @@
         <% if promocode.p_spare_51 && (promocode.p_spare_51 <= DateTime.now) %>
         <% promocode.p_spare_51 %>
           <% if promocode.p_spare_51.present? %>
-            <div class="expried_wrap"><div class="mark term endtoday"><p><span><%= number_to_percentage(promocode.p_spare_27, precision: 0) %> OFF</span>Ends Today</p></div></div>
+            <div class="expried_wrap"><div class="mark term endtoday"><p><span><%= number_to_percentage(promocode.p_spare_27, precision: 0) %> OFF</span>End Today</p></div></div>
           <% end %>
         <% else %>
           <div class="mark"><span><%= number_to_percentage(promocode.p_spare_27, precision: 0) %></span><em>OFF</em></div>
@@ -39,6 +39,7 @@
         <%= link_to (image_tag promocode.pimage.url(:small), alt: promocode.p_title, title: promocode.p_image_title), promocode %>
       <% end %>
       <div class="mark"><span><%= number_to_percentage(promocode.p_spare_27, precision: 0) %></span><em>OFF</em></div>
+      <!-- <div class="ex_mark">Expired</div> -->
     </div>
   <% end %>
   <!-- End Image Section--> 
