--- a/app/views/shared/_amz_slider.html.erb
+++ b/app/views/shared/_amz_slider.html.erb
@@ -5,6 +5,8 @@
 
     <div class="img_box"><a target="_blank" href="https://amzn.to/2Z5Tlsa"><img class="item" src="https://i.pinimg.com/564x/82/e1/79/82e179361ff44075d5e43ccec07112c8.jpg"><p>Find Christmas Gifts on Amazon</p></a></div>
 
+    <div class="img_box"><a target="_blank" href="https://amzn.to/38ZGqfQ"><img class="item" src="https://images-na.ssl-images-amazon.com/images/I/61jiXeUPtjL._AC_SX569_.jpg"><p>Dyson | Save up to 42% off on vacuums, airpurifiers & more</p></a></div>
+
     <div class="img_box"><a target="_blank" href="https://amzn.to/2rG9B7b"><img class="item" src="https://images-na.ssl-images-amazon.com/images/I/61C0-NtP-SL._AC_SR300,300_.jpg"><p>Save up to 39% off on Garmin Smart Watches</p></a></div>
 
     <div class="img_box"><a target="_blank" href="https://amzn.to/2Pv0fnT"><img class="item" src="https://images-na.ssl-images-amazon.com/images/I/81pqZIO5C4L._AC_SR300,300_.jpg"><p>Save up to 35% off on Select LG Smart 4K TVs</p></a></div>
