--- a/app/assets/stylesheets/store.css
+++ b/app/assets/stylesheets/store.css
@@ -10,7 +10,7 @@
 .st_warp .st_box .st_image img{width:100%;height:70px;vertical-align:middle;object-fit:contain;}
 .st_warp .st_box .inner{float:left;width:77%;margin-left:3%;padding:7px 7px 0 0;height:100px;}
 .st_warp .st_box .inner p{text-overflow:ellipsis;white-space:nowrap;word-wrap:normal;width:310px;overflow:hidden;word-break:break-word;font-size:13px;}
-.st_warp .st_box .inner p .st_title{background:yellow;}
+.st_warp .st_box .inner p .st_title{border:1px solid;padding:5px;font-weight:bold;}
 .st_warp .st_box .inner p a{background:#000;padding:0 5px;color:#fff;}
 .st_warp .st_box .inner em{}
 .st_warp .st_box .inner span{margin:5px 0;}
