--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -228,7 +228,7 @@ header .gnb_m,header .gnb_open2{display:none;}
   .sub_nav .sub_nav_pc{display:none;}
   .sub_nav .gnb_m{display:block;background:#000;position:fixed;right:-800px;top:0;width:100%;z-index:303;}
   .sub_nav .gnb_m>ul{margin:10px 0 0 5%;}
-  .sub_nav .gnb_m>ul>li{border-right:none;float:none;}
+  .sub_nav .gnb_m>ul>li{border-right:none;float:none;margin:10px 0;}
   .sub_nav .gnb_m>ul>li>a{text-decoration:none;font-size:45px;line-height:1.1;font-family: 'Anton', sans-serif;;text-align:left;color:#fff;display:block;}
   /*.sub_nav .gnb_m>ul>li>a.active{color:#fff;font-weight:500;border-bottom:2px solid #fff;}*/
   .sub_nav .gnb_m>ul>li>a>em{font-size:17px;}
@@ -359,8 +359,8 @@ header .gnb_m,header .gnb_open2{display:none;}
 }
 
 /*search*/
-.search_box{float:left;}
-.search_box input{font-size:35px;padding:10px;margin-left:20px;border:none;border-bottom:1px solid #ccc;}
+.search_box{float:left;width:100%;border:3px solid;}
+.search_box input{font-size:35px;padding:10px;margin-left:20px;border:none;border-bottom:1px solid #ccc;width:97%;}
 @media screen and (max-width:640px){
   .search_box{float:none;background:#000;padding:3px;}
   .search_box input{font-size:20px;padding:5px;margin:0;width:100%;}
