--- a/app/views/deals/_header_store.html.erb
+++ b/app/views/deals/_header_store.html.erb
@@ -5,7 +5,7 @@
       <ul class="clearfix">
         <li><a href="/deals/stores">Home</a></li>
         <li class="coumos1"><a href="/storepromotions">Sales Offer & Promotions</a></li>
-        <li><a href="/storedeals">Bargains</a></li>
+        <li><a href="/storedeals">Bargains By Store</a></li>
         <!-- <li><a href="/deals/most_reviewed">Most-Reviewed</a></li>
         <li class="coumos" ><a href="/deals/promotions">Sales Offer & Promotions</a></li>
         <li><a href="/deals/quick_search">Quick Search</a></li> -->
@@ -14,9 +14,9 @@
     
     <div class="gnb_m">
       <ul class="clearfix">
-        <li><a href="/deals/stores">Home,</a></li>
-        <li class="coumos1"><a href="/storepromotions">Sales Offer & Promotions,</a></li>
-        <li><a href="/storedeals">Bargains</a></li>
+        <li><a href="/deals/stores">HOME,</a></li>
+        <li class="coumos1"><a href="/storepromotions">SALES OFFER & PROMOTIONS,</a></li>
+        <li><a href="/storedeals">BARGAINS BY STORE</a></li>
       </ul>
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="close menu" /></button>
     </div>
