--- a/app/assets/stylesheets/store.css
+++ b/app/assets/stylesheets/store.css
@@ -104,6 +104,7 @@
 .sp_wrap .sp_right .inner .sp_code{margin-bottom:5px;}
 .sp_wrap .sp_right .inner .h_price{margin-top:7px;}
 .sp_wrap .sp_right .inner .h_price .span_01{text-decoration:line-through;color:#616161;}
+.sp_wrap .sp_right .inner .sp_price{font-size:12px;}
 .sp_wrap .sp_right .inner em{font-size:12px;color:#616161;}
 .sp_wrap .sp_right .inner em.em_box{margin-top:10px;}
 /*.sp_wrap .sp_right .inner em.expired{color:#ff4d4d;font-size:12px;}
@@ -116,6 +117,13 @@
 .sp_wrap .sp_right .sp_btn_m{display:none;}
 .sp_wrap .sp_right .sp_btn{float:left;width:20%;position:relative;height:104.39px;display:none;}
 .sp_wrap .sp_right .sp_btn a{text-decoration:none;background:#000;color:#fff;padding:20px;border-radius:10px;display:block;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);width:100%;}
+
+.show_wrap .like_more{width:1000px;margin:0 auto;padding:10px;font-family:'Montserrat', sans-serif;}
+.show_wrap .like_more p{font-size:25px;border-bottom:2px solid;}
+.show_wrap .like_more p span{text-transform:uppercase;}
+.show_wrap .like_more ul{margin-left:30px;}
+.show_wrap .like_more ul li{list-style:disc;margin:5px 0;}
+.show_wrap .like_more ul li a{font-size:15px;color:#08f;}
 
 @media screen and (max-width:640px){
   .sp_wrap{margin:0;}
@@ -136,6 +144,10 @@
   .sp_wrap .sp_right .sp_btn{display:none;}
   .sp_wrap .sp_right .sp_btn_m{display:block;text-align:center;padding:3px 0;background:#000;}
   .sp_wrap .sp_right .sp_btn_m a{color:#fff;}
+  .show_wrap .like_more{width:100%;padding:0;margin:0;}
+  .show_wrap .like_more p{font-size:17px;}
+  .show_wrap .like_more ul{margin-left:15px;}
+  .show_wrap .like_more ul li a{font-size:13px}
 }
 @media screen and (min-width:641px) and (max-width:1199px){
   .sp_wrap{margin:0;}
@@ -166,7 +178,6 @@
 .store_top .st_top_box .image{float:left;width:30%;}
 .store_top .st_top_box .image img{width:100%;}
 .store_top .st_top_box .inner{float:left;width:63%;margin-right:3%;}
-
 
 
 /* Store Promotions Sites Info for Form Page */
@@ -203,7 +214,6 @@
     50% {transform: scale(1.06);}
     100% {transform: scale(1);}
 }
-
 
 /* Dropdown Store Menu */
 .dropdown{display:inline-block;position:relative;display:none;margin-bottom:10px;width:100%;}
