--- a/app/assets/stylesheets/store.css
+++ b/app/assets/stylesheets/store.css
@@ -94,10 +94,13 @@
 .sp_wrap .sp_right .sp_card .admin{font-size:12px;position:absolute;bottom:0;right:0;}
 .sp_wrap .sp_right .sp_image{float:left;width:15%;height:100px;position:relative;}
 .sp_wrap .sp_right .sp_image img{width:100%;height:70px;object-fit:contain;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);}
-.sp_wrap .sp_right .sp_image em.expired{background:#ff4d4d;color:#fff;padding:4px 5px;font-size:11px;}
-.sp_wrap .sp_right .sp_image em.endtoday{background:#ffa500;color:#fff;padding:4px 5px;font-size:10px;}
+.sp_wrap .sp_right .sp_image .date_m{display:none;}
+.sp_wrap .sp_right .date_comm em.expired{background:#ff4d4d;color:#fff;padding:4px 5px;font-size:11px;border-radius:10px;}
+.sp_wrap .sp_right .date_comm em.endtoday{background:#ffa500;color:#fff;padding:4px 5px;font-size:11px;border-radius:10px;}
 .sp_wrap .sp_right .inner{float:left;width:80%;margin-left:5%;}
+.sp_wrap .sp_right .inner p{display:inline-block;}
 .sp_wrap .sp_right .inner span.index_title{font-weight:500;border:1px solid #ccc;padding:0 5px;}
+.sp_wrap .sp_right .inner .date_pc{display:inline;float:right;}
 /*.sp_wrap .sp_right .inner .expire_date em{display:inline-block;}*/
 .sp_wrap .sp_right .inner .sp_title{margin:2px 0;font-weight:500;line-height:1.2;font-size:15px;line-height:1.4;height:2.8em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:2;}
 .sp_wrap .sp_right .inner .sp_title a{color:#616161;display:block;font-weight:100;}
@@ -148,6 +151,8 @@
   .show_wrap .like_more p{font-size:17px;}
   .show_wrap .like_more ul{margin-left:15px;}
   .show_wrap .like_more ul li a{font-size:13px}
+  .sp_wrap .sp_right .inner .date_pc{display:none;}
+  .sp_wrap .sp_right .sp_image .date_m{display:block;padding-top:5px;}
 }
 @media screen and (min-width:641px) and (max-width:1199px){
   .sp_wrap{margin:0;}
